// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`When given a danger message Message renders a snapshot properly 1`] = `
<div
  className="alert alert-danger"
>
  <span
    aria-hidden="true"
    className="glyphicon glyphicon-exclamation-sign"
  />
  <span>
     
    Hello, World!
  </span>
  <button
    className="close"
    data-dismiss="alert"
    onClick={[Function]}
  >
    ×
  </button>
</div>
`;

exports[`When given a success message Message renders a snapshot properly 1`] = `
<div
  className="alert alert-success"
>
  <span
    aria-hidden="true"
    className="glyphicon glyphicon-exclamation-sign"
  />
  <span>
     
    Hello, World!
  </span>
  <button
    className="close"
    data-dismiss="alert"
    onClick={[Function]}
  >
    ×
  </button>
</div>
`;
